--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
             "program": "${file}",
             "console": "integratedTerminal", 
             "args": [
-                "text2"                
+                "text2"
+                // "test/spacy/patterns",
+                // "test/spacy/RC_2005-12.bz2"
             ]
         },
         {
