--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "console": "integratedTerminal", 
             "args": [
                 // "text2"
-                "test/spacy/patterns",
-                "test/spacy/RC_2005-12.bz2"
+                // "test/spacy/patterns",
+                // "test/spacy/RC_2005-12.bz2"
             ]
         },
         {
