--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,8 @@
                 // "text2"
                 // "test/spacy/patterns",
                 // "test/spacy/RC_2005-12.bz2"
+                // "-t",
+                // "Hello"
             ]
         },
         {
