--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,10 @@
                 // "test/spacy/RC_2005-12.bz2"
                 // "-t",
                 // "Hello"
+                // "--model",
+                // "es",
                 "--id",
-                "2"
+                "16",
             ]
         },
         {
