--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,12 +45,14 @@
             "django": true
         },
         {
-            "name": "Python: Flask",
+            "name": "Flask",
             "type": "python",
             "request": "launch",
             "module": "flask",
+            "pythonPath": "${config:python.pythonPath}",
+            "program": "${file}",
             "env": {
-                "FLASK_APP": "server.py"
+                "FLASK_APP": "${file}"
             },
             "args": [
                 "run",
